# server/src/EventPump/Api/openapi.json
@@ -93,15 +93,8 @@
           "required": true
         },
         "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/IdentityResponse"
-                }
-              }
-            }
+          "204": {
+            "description": "No Content"
           },
           "400": {
             "description": "Bad Request",
@@ -793,18 +786,6 @@
               "null",
               "object"
             ]
-          }
-        }
-      },
-      "IdentityResponse": {
-        "required": [
-          "anonymous_id"
-        ],
-        "type": "object",
-        "properties": {
-          "anonymous_id": {
-            "type": "string",
-            "format": "uuid"
           }
         }
       },
